--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Zhouqs666.GitHub.io by zhouqs666</title>
+    <title>周神的Blog</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-dark.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>Zhouqs666.GitHub.io</h1>
+          <h1>test</h1>
           <p>welcome to johnson&#39;s blog！</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/zhouqs666">zhouqs666</a></span>
