--- a/index.html
+++ b/index.html
@@ -1,48 +1,16 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>周神的Blog</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-dark.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
-  </head>
-  <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/zhouqs666">View On GitHub</a></li>
-        </nav>
-      </div><!-- end header -->
-
-    <div class="wrapper">
-
-      <section>
-        <div id="title">
-          <h1>test</h1>
-          <p>welcome to johnson&#39;s blog！</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/zhouqs666">zhouqs666</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
-        </div>
-
-        <h1>
-<a id="zhouqs666githubio" class="anchor" href="#zhouqs666githubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>zhouqs666.github.io</h1>
-
-<p>welcome to johnson's blog！</p>
-      </section>
-
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <title>知行合一</title>
+</head>
+<body>
+<div id=" nav-warp">
+    <ul>
+        <li>主页</li>
+        <li>笔记</li>
+        <li>关于我</li>
+    </ul>
+</div>
+</body>
 </html>
