--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>知行合一</title>
+    <link rel="stylesheet" href="stylesheets/li.css"/>
 </head>
 <body>
-<div id=" nav-warp">
-    <ul>
-        <li>主页</li>
-        <li>笔记</li>
-        <li>关于我</li>
+<div id="wrap" >
+    <ul class="list1" >
+        <li ><a href="#">主页</a></li>
+        <li><a href="">笔记</a></li>
+        <li><a href="">关于我</a></li>
     </ul>
 </div>
 </body>
