--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <title>知行合一</title>
     <link rel="stylesheet" href="stylesheets/li.css"/>
 </head>
-<body>
-<div id="wrap" >
+<body class="bg">
+<div id="wrap">
     <ul class="list1" >
         <li ><a href="#">主页</a></li>
-        <li><a href="">笔记</a></li>
-        <li><a href="">关于我</a></li>
+        <li><a href="#">笔记</a></li>
+        <li><a href="#">关于我</a></li>
     </ul>
 </div>
 </body>
 </html>
-<script src="javascripts/respond.js"></script>
+<script></script>
