--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body class="bg">
 <div id="wrap">
     <ul class="list1" >
-        <li ><a href="http://user.qzone.qq.com/809089952" target="_blank">MyHome</a></li>
+        <li ><a href="http://zhouqs666.github.io/MyBlog/blog.html" target="_blank">Blog</a></li>
         <li><a href="http://news.baidu.com/" target="_blank">News</a></li>
-        <li><a href="#" target="_blank">AboutMe</a></li>
+        <li><a href="http://user.qzone.qq.com/809089952" target="_blank">Me</a></li>
     </ul>
 </div>
 </body>
