--- a/MyBlog/blog.html
+++ b/MyBlog/blog.html
@@ -18,42 +18,42 @@
         <a href='#'>
             <div class='card bg-01'>
                 <!--<span class='card-content'>item #1</span>-->
-                <a href="http://news.baidu.com" class="card-content">看看新闻</a>
+                <a href="http://news.baidu.com" class="card-content" target="_blank">看看新闻</a>
             </div>
         </a>
     </div>
     <div class='card-wrapper'>
         <a href='#'>
             <div class='card bg-02'>
-                <a href="http://user.qzone.qq.com/809089952" class="card-content">点我有惊喜</a>
+                <a href="http://user.qzone.qq.com/809089952" class="card-content" target="_blank">点我有惊喜</a>
             </div>
         </a>
     </div>
     <div class='card-wrapper'>
         <a href='#'>
             <div class='card bg-03'>
-                <span class='card-content'><a href="http://www.w3school.com.cn/">w3cSchool</a></span>
+                <span class='card-content'><a href="http://www.w3school.com.cn/" target="_blank">w3cSchool</a></span>
             </div>
         </a>
     </div>
     <div class='card-wrapper'>
         <a href='#'>
             <div class='card bg-04'>
-                <a href="http://fanyi.baidu.com/" class="card-content">百度翻译</a>
+                <a href="http://fanyi.baidu.com/" class="card-content" target="_blank">百度翻译</a>
             </div>
         </a>
     </div>
     <div class='card-wrapper'>
         <a href='#'>
             <div class='card bg-05'>
-                <a href="https://www.google.com.hk/" class="card-content">谷歌</a>
+                <a href="https://www.google.com.hk/" class="card-content" target="_blank">谷歌</a>
             </div>
         </a>
     </div>
     <div class='card-wrapper'>
         <a href='#'>
             <div class='card bg-06'>
-                <a href="http://www.baidu.com" class="card-content">百度</a>
+                <a href="http://www.baidu.com" class="card-content" target="_blank">百度</a>
             </div>
         </a>
     </div>
